test/data/pass/statements/if.js
if(true) function f(){}
if(true); else function f(){}
