test/data/fail/statements/if.js
'use strict'; if(true) function a(){} //<>
'use strict'; if(true); else function a(){} //<>
